--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,14 @@
+/* @media (min-width: 767px) {
+  .location {
+    padding-bottom: 5px;
+  } */
+
+
 /* contact columns side by side in mobile */
 @media (max-width: 767px) {
   .contact-info-col {
     width: 33% !important;
+    padding-bottom: 10px;
   }
 }
 
