--- a/css/index.css
+++ b/css/index.css
@@ -51,7 +51,7 @@
   font-family: 'Open Sans', sans-serif;
   line-height: normal;
   font-size: 15px;
-  padding-bottom: 30px;
+  /* padding-bottom: 30px; */
 }
 
 
