--- a/css/index.css
+++ b/css/index.css
@@ -24,9 +24,14 @@
   }
 } */
 
-.test {
-  margin-top: 50px !important;
+
+@media (min-width: 767px) {
+  .test {
+    margin-top: 50px !important;
+  }
 }
+
+
 
 .title {
   font-size: 60px !important;
