--- a/css/index.css
+++ b/css/index.css
@@ -764,7 +764,7 @@ body {
   /* font-family: 'Open Sans', sans-serif; */
   /* font-family: 'Josefin Sans', sans-serif; */
   /* text-transform: uppercase; */
-  padding-top: 5px;
+  /* padding-top: 5px; */
   /* border: none;
   font-family: arial, sans-serif;
   color: black;
