--- a/css/index.css
+++ b/css/index.css
@@ -335,6 +335,7 @@ h4 {
 }
 
 .footer-bs {
+
   font-family: 'Open Sans', sans-serif;
   background-color: #c5d9e7;
   padding: 15px 40px;
@@ -344,6 +345,10 @@ h4 {
   /* 	border-top-left-radius: 0px;
 	border-bottom-left-radius: 6px; */
 }
+
+/* .contact-text {
+  color: #2b8d7b
+} */
 
 .footer-bs .footer-brand,
 .footer-bs .footer-nav,
