--- a/css/index.css
+++ b/css/index.css
@@ -602,10 +602,10 @@ margin-right: 0px;
 
 /* contact form */
 
-.message {
+.message1 {
   position: relative;
   width: 550px;
-  height: 365px;
+  height: 540px;
   background: white;
   padding-left: 15px;
   padding-right: 15px;
@@ -617,6 +617,26 @@ margin-right: 0px;
   z-index: 2;
 }
 
+
+
+
+.message {
+  position: relative;
+  width: 550px;
+  height: 460px;
+  background: white;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 30px auto;
+  /* color: #777; */
+  font-size: 12px;
+  border: solid 2px #c5d9e7;
+  border-radius: 15px;
+  z-index: 2;
+}
+
+.message1:before,
+.message1:after,
 .message:before,
 .message:after {
   position: absolute;
@@ -632,6 +652,7 @@ margin-right: 0px;
   z-index: 1;
 }
 
+.message1:before,
 .message:before {
   border-color: #c5d9e7 transparent transparent transparent;
   border-width: 30px 24px 0px 0px;
@@ -658,7 +679,7 @@ margin-right: 0px;
 }
 
 .name:focus {
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.2);
   outline: none;
 }
 
@@ -677,9 +698,46 @@ margin-right: 0px;
   text-indent: 10px;
 }
 
+.content1 {
+  margin-top: 15px;
+  width: 100%;
+  height: 40px;
+  background: rgba(0, 0, 0, 0.1);
+  display: inline-block;
+  border: none;
+  border-radius: 4px;
+  -webkit-transition: all 0.6s ease;
+  -o-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  resize: none;
+  text-indent: 10px;
+}
+
+
+.content1:focus,
 .content:focus {
   outline: none;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.phone {
+  margin-top: 15px;
+  width: 40%;
+  height: 40px;
+  background: rgba(0, 0, 0, 0.1);
+  display: inline-block;
+  border: none;
+  border-radius: 4px;
+  -webkit-transition: all 0.6s ease;
+  -o-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  resize: none;
+  text-indent: 10px;
+}
+
+.phone:focus {
+  outline: none;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 ::-webkit-input-placeholder {
