--- a/css/index.css
+++ b/css/index.css
@@ -5,26 +5,19 @@
   width: 50%;
 } */
 
-
 @media (max-width: 767px) {
   .menu-text {
     padding-top: 15px !important;
   }
 }
 
-
-
 .phone-number {
-  font-size: 12px
+  font-size: 12px;
 }
 
 .contact-pages {
-  font-family: 'Open Sans', sans-serif;
-
+  font-family: "Open Sans", sans-serif;
 }
-
-
-
 
 /* @media (max-width: 767px) {
   .second-menu-column {
@@ -32,19 +25,15 @@
   }
 } */
 
-
 @media (min-width: 767px) {
   .test {
     margin-top: 50px !important;
   }
 }
 
-
-
 .title {
   font-size: 60px !important;
-  font-family: 'Open Sans', sans-serif;
-
+  font-family: "Open Sans", sans-serif;
 }
 
 /* @media (min-width: 767px) {
@@ -52,9 +41,7 @@
     padding-bottom: 5px;
   } */
 
-
 @media (max-width: 767px) {
-
   .message1,
   .message {
     width: 100% !important;
@@ -69,14 +56,12 @@
   }
 }
 
-
 .contact-info {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   line-height: normal;
   font-size: 15px;
   /* padding-bottom: 30px; */
 }
-
 
 /* changing color of active button press for menu */
 .active1,
@@ -345,8 +330,7 @@ h4 {
 }
 
 .footer-bs {
-
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #c5d9e7;
   padding: 15px 40px;
   color: rgba(255, 255, 255, 1);
@@ -464,7 +448,6 @@ h4 {
 }
 
 @media (min-width: 768px) {
-
   .footer-bs .footer-nav,
   .footer-bs .footer-social,
   .footer-bs .footer-ns {
@@ -627,9 +610,6 @@ margin-right: 0px;
   z-index: 2;
 }
 
-
-
-
 .message {
   position: relative;
   width: 550px;
@@ -722,7 +702,6 @@ margin-right: 0px;
   resize: none;
   text-indent: 10px;
 }
-
 
 .content1:focus,
 .content:focus {
@@ -821,8 +800,6 @@ body {
   float: right;
 }
 
-
-
 /* MENU REPLACEMENT */
 
 #eat-menu,
@@ -834,6 +811,7 @@ body {
 #drink-button {
   background: #fff;
   border: none;
+  padding: 5px;
   /* font-family: 'Open Sans', sans-serif; */
   /* font-family: 'Josefin Sans', sans-serif; */
   /* text-transform: uppercase; */
@@ -845,7 +823,6 @@ body {
   cursor: pointer;
   display: inline-block; */
   border-radius: 4px;
-
 }
 
 #button-background {
@@ -1037,7 +1014,6 @@ ul.social-network li {
   height: auto;
 } */
 
-
 /* .navbar,
 .nav-text {
   font-family: 'Open Sans', sans-serif !important;
@@ -1092,7 +1068,7 @@ ul.social-network li {
 
 /* GALLERY */
 
-.image>div {
+.image > div {
   padding: 0 4px !important;
 }
 
@@ -1320,7 +1296,7 @@ body {
 
 .menu-text {
   padding-bottom: 5px;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   border-bottom: 1px dashed grey;
   text-transform: uppercase;
   font-size: 16px;
@@ -1929,7 +1905,7 @@ body.hero-anime #switch {
     transition: all 200ms linear;
   }
 
-  .dropdown-toggle[aria-expanded="true"]+.dropdown-menu {
+  .dropdown-toggle[aria-expanded="true"] + .dropdown-menu {
     margin-top: 10px !important;
     margin-bottom: 20px !important;
   }
